src/test/deca/context/invalid/created/binary_exp/op_bool/and_int_int.deca
// Description :
//    test and entre un int et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Type gauche int. Type droit int Type attendu: ‘boolean’

{
int a;
int b;
boolean c = a && b;
}
